<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Monu-Mental Math</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="mental_math">Mental Math</string>
    <string name="title_activity_mental_math">Mental Math</string>
    <string name="zero_seconds_zero_milliseconds">00:00</string>
    <string name="a_line">--------------------</string>
    <string name="make_negative">Make Negative</string>
    <string name="c">C</string>
    <string name="clear">Clear</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_eight">8</string>
    <string name="number_seven">7</string>
    <string name="number_nine">9</string>
    <string name="number_zero">0</string>

</resources>